--- a/src/app/views/common/footer/footer.component.html
+++ b/src/app/views/common/footer/footer.component.html
@@ -2,10 +2,14 @@
 <mat-toolbar color="secundary">
     <mat-toolbar-row>
 
-      <h1><i class="fab fa-linkedin"></i> {{ miNombre }}</h1>
+      <a mat-button  href="https://www.linkedin.com/in/danielroapetrasic/" target="_blank">
+        <h1><i class="fab fa-linkedin"></i> {{ miNombre }}</h1>    
+      </a>
+
       <span class="menu-spacer"></span>
       <div class="menu">
-        <a mat-button [routerLink]="'/accounts'"><i class="fab fa-github"></i> gitHub </a>
+        <a mat-button  href="https://github.com/dani3lrp/ripleyfront" target="_blank"><i class="fab fa-github"></i> Front</a>
+        <a mat-button href="https://github.com/dani3lrp/ripleyback" target="_blank"><i class="fab fa-github"></i> Back</a>
         <a mat-button [routerLink]="'/create-account'"><i class="fas fa-server"></i> Heroku </a>
         <a mat-button [routerLink]="'/contacts'"><i class="fas fa-info-circle"></i> Info </a>
   
