--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,17 +7,18 @@
 .footer {
     position: absolute;
     bottom: 0;
-    width: 100%
+    width: 100%;
   }
 
   .container {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    top: 0;
   }
   
   .main {
-    flex: 1;
+    flex: 0;
   }
 
   
