--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,6 @@
 
   <router-outlet class="main"></router-outlet>
 
-  <app-footer></app-footer>
+  <app-footer class="footer"></app-footer>
 
 </div>
