--- a/src/app/views/lista-destinatarios/lista-destinatarios.component.css
+++ b/src/app/views/lista-destinatarios/lista-destinatarios.component.css
@@ -7,7 +7,8 @@ table {
     width: 100%;
   }
 
-/*   .paginator {
-    position: fixed;
+  .center {
+    margin: auto;
+    width: 50%;
 
-  } */
+  }
