--- a/src/app/views/lista-destinatarios/lista-destinatarios.component.html
+++ b/src/app/views/lista-destinatarios/lista-destinatarios.component.html
@@ -2,58 +2,56 @@
   <mat-card-title style="text-align: center">{{ title }}</mat-card-title>
   <div class="example-container">
 
-<mat-form-field>
-    <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
-  </mat-form-field>
-  
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-  
-    <!-- nombre Column -->
-    <ng-container matColumnDef="nombre">
-      <th mat-header-cell *matHeaderCellDef> nombre </th>
-      <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
-    </ng-container>
-  
-    <!-- banco Column -->
-    <ng-container matColumnDef="banco">
-      <th mat-header-cell *matHeaderCellDef> banco </th>
-      <td mat-cell *matCellDef="let element"> {{element.banco}} </td>
-    </ng-container>
-  
-    <!-- cuenta Column -->
-    <ng-container matColumnDef="cuenta">
-      <th mat-header-cell *matHeaderCellDef> cuenta </th>
-      <td mat-cell *matCellDef="let element"> {{element.cuenta}} </td>
-    </ng-container>
-  
-    <!-- tipo Column -->
-    <ng-container matColumnDef="tipo">
-      <th mat-header-cell *matHeaderCellDef> tipo </th>
-      <td mat-cell *matCellDef="let element"> {{element.tipo}} </td>
-    </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  
-    <!-- Row shown when there is no matching data. -->
-    <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-    </tr>
+    <mat-spinner class="center" *ngIf="spinner"></mat-spinner>
 
-  </table>
+    <div *ngIf="!spinner">
 
-  <mat-paginator class="paginator" [length]="50"
-              [pageSize]="8"
-              [pageSizeOptions]="[5, 10]">
-</mat-paginator>
+      <mat-form-field>
+        <mat-label>Filter</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+      </mat-form-field>
 
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+        <!-- nombre Column -->
+        <ng-container matColumnDef="nombre">
+          <th mat-header-cell *matHeaderCellDef> nombre </th>
+          <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+        </ng-container>
+
+        <!-- banco Column -->
+        <ng-container matColumnDef="banco">
+          <th mat-header-cell *matHeaderCellDef> banco </th>
+          <td mat-cell *matCellDef="let element"> {{element.banco}} </td>
+        </ng-container>
+
+        <!-- cuenta Column -->
+        <ng-container matColumnDef="cuenta">
+          <th mat-header-cell *matHeaderCellDef> cuenta </th>
+          <td mat-cell *matCellDef="let element"> {{element.cuenta}} </td>
+        </ng-container>
+
+        <!-- tipo Column -->
+        <ng-container matColumnDef="tipo">
+          <th mat-header-cell *matHeaderCellDef> tipo </th>
+          <td mat-cell *matCellDef="let element"> {{element.tipo}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+        <!-- Row shown when there is no matching data. -->
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+        </tr>
+
+      </table>
+
+      <mat-paginator class="paginator" [length]="50" [pageSize]="8" [pageSizeOptions]="[5, 10]">
+      </mat-paginator>
+
+    </div>
 
   </div>
+
 </mat-card>
-
-
-
-
-
-
