--- a/src/app/views/movimientos/movimientos.component.html
+++ b/src/app/views/movimientos/movimientos.component.html
@@ -2,60 +2,55 @@
   <mat-card-title style="text-align: center">{{ title }}</mat-card-title>
   <div class="example-container">
 
-<mat-form-field>
-    <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
-  </mat-form-field>
-  
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-  
-    <!-- nombre Column -->
-    <ng-container matColumnDef="nombre">
-      <th mat-header-cell *matHeaderCellDef> nombre. </th>
-      <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
-    </ng-container>
-  
-    <!-- numCuenta Column -->
-    <ng-container matColumnDef="numCuenta">
-      <th mat-header-cell *matHeaderCellDef> numCuenta </th>
-      <td mat-cell *matCellDef="let element"> {{element.numCuenta}} </td>
-    </ng-container>
-  
-    <!-- egresoIngreso Column -->
-    <ng-container matColumnDef="egresoIngreso">
-      <th mat-header-cell *matHeaderCellDef> egresoIngreso </th>
-      <td mat-cell *matCellDef="let element"> {{element.egresoIngreso}} </td>
-    </ng-container>
-  
-    <!-- monto Column -->
-    <ng-container matColumnDef="monto">
-      <th mat-header-cell *matHeaderCellDef> monto </th>
-      <td mat-cell *matCellDef="let element"> {{element.monto}} </td>
-    </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  
-    <!-- Row shown when there is no matching data. -->
-    <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-    </tr>
+    <mat-spinner class="center" *ngIf="spinner"></mat-spinner>
 
-  </table>
+    <div *ngIf="!spinner">
 
-  <mat-paginator [length]="50"
-              [pageSize]="8"
-              [pageSizeOptions]="[5, 10]">
-</mat-paginator>
+      <mat-form-field>
+        <mat-label>Filter</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+      </mat-form-field>
 
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
+        <!-- nombre Column -->
+        <ng-container matColumnDef="nombre">
+          <th mat-header-cell *matHeaderCellDef> nombre. </th>
+          <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+        </ng-container>
 
+        <!-- numCuenta Column -->
+        <ng-container matColumnDef="numCuenta">
+          <th mat-header-cell *matHeaderCellDef> numCuenta </th>
+          <td mat-cell *matCellDef="let element"> {{element.numCuenta}} </td>
+        </ng-container>
 
+        <!-- egresoIngreso Column -->
+        <ng-container matColumnDef="egresoIngreso">
+          <th mat-header-cell *matHeaderCellDef> egresoIngreso </th>
+          <td mat-cell *matCellDef="let element"> {{element.egresoIngreso}} </td>
+        </ng-container>
 
+        <!-- monto Column -->
+        <ng-container matColumnDef="monto">
+          <th mat-header-cell *matHeaderCellDef> monto </th>
+          <td mat-cell *matCellDef="let element"> {{element.monto}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+        <!-- Row shown when there is no matching data. -->
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+        </tr>
+
+      </table>
+
+      <mat-paginator [length]="50" [pageSize]="8" [pageSizeOptions]="[5, 10]">
+      </mat-paginator>
+
+    </div>
 
   </div>
 </mat-card>
-
-
-
-
